# dotypasta

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: argparse.rs  main.rs
src/dotypasta/: app.rs  clone.rs  config.rs  files.rs  load.rs  mod.rs  repo.rs  repository.rs
